--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "kehe2444-tracker",
   "version": "1.0.0",
   "description": "A tracking app for chinese recipes",
-  
   "scripts": {
     "start": "node server.js",
     "prestart": "parcel build ./public/index.html",
@@ -11,9 +10,11 @@
   "author": "Kevin He",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "sass": "^1.77.4"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.12.0",
     "parcel": "^2.12.0"
   }
 }
